@@ -36,6 +36,8 @@ CAVEATS :
  - ChannelExec now is using a virtual tty by default
  - new commands : fsFreeSpace & fileRights
  - minor updates for darwin (mac os x) support
+ - OS process modeling => LinuxProcess AIXProcess and SunOSProcess
+ - ps() command enhancements 
 
 ------------------------------------------------------------------
 0.9.6 (2013-01-07)
